<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.auth.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/medium"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="@string/register" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/aNewAccount"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="50dp"
                android:onClick="selectPicture"
                app:cardElevation="1dp"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/im_avatar"/>
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:elevation="1dp"
                android:maxLength="30"
                android:paddingHorizontal="15dp"
                android:layout_marginHorizontal="30dp"
                android:paddingVertical="10dp"
                android:textSize="14sp"
                android:fontFamily="@font/medium"
                android:hint="@string/fullName"
                android:background="@drawable/rounded_box_15"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"
                android:elevation="1dp"
                android:maxLength="30"
                android:digits="abcdefghijklmnopqrstuvwxyz0123456789_"
                android:background="@drawable/rounded_box_15"
                android:ems="10"
                android:fontFamily="@font/medium"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_15"
                android:elevation="1dp"
                android:ems="10"
                android:maxLength="40"
                android:fontFamily="@font/medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_15"
                android:elevation="1dp"
                android:ems="10"
                android:maxLength="26"
                android:fontFamily="@font/medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingHorizontal="15dp"
                android:paddingVertical="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:onClick="next"
                android:gravity="center"
                android:background="@drawable/rounded_box_15"
                android:backgroundTint="@color/button"
                android:elevation="1dp"
                android:ems="10"
                android:fontFamily="@font/medium"
                android:textStyle="bold"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textColorHint="@color/hint"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <include
        android:id="@+id/lottie"
        layout="@layout/view_lottie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>