<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AddNewPost">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:onClick="back"
            android:src="@drawable/im_back"
            app:tint="@color/header"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/newPostHeader"
            android:textColor="@color/header" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="10dp"
            android:src="@drawable/im_back"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/color4"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/picture"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:text="@string/picture"
            android:textColor="@color/yellow"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/video"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/medium"
            android:textSize="14sp"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/text"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/publish"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_color4_20"
                android:orientation="horizontal"
                android:padding="13dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/content"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/none"
                        android:ems="10"
                        android:fontFamily="@font/medium"
                        android:gravity="start"
                        android:hint="@string/writeSomething"
                        android:inputType="textMultiLine"
                        android:maxLines="20"
                        android:textColor="@color/textDark"
                        android:textColorHint="@color/hint"
                        android:textSize="12sp" />
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mediaFrame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1.3">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="2dp"
                        app:cardCornerRadius="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="3:4"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/thumbnail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />

                        <ImageView
                            android:id="@+id/importMedia"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center"
                            android:src="@drawable/im_picture"
                            app:tint="@color/color4" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/subjectLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_15"
                android:backgroundTint="@color/color5"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/im_subject"
                    app:tint="@color/color4" />

                <TextView
                    android:id="@+id/subject"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/medium"
                    android:gravity="center_vertical"
                    android:hint="@string/selectCategory"
                    android:textColor="@color/textDark"
                    android:textColorHint="@color/hint"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/subjectIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="11dp"
                    android:src="@drawable/im_arrow_down" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/locationLayout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_15"
                android:backgroundTint="@color/color5"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="2dp"
                    android:src="@drawable/im_location"
                    app:tint="@color/color4" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/medium"
                    android:gravity="center_vertical"
                    android:text="@string/location"
                    android:textColor="@color/textDark"
                    android:textColorHint="@color/hint"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/locationIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="11dp"
                    android:src="@drawable/im_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_box_15"
                android:backgroundTint="@color/color5"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="3dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:padding="3dp"
                    android:src="@drawable/im_comment"
                    app:tint="@color/color4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/medium"
                    android:gravity="center_vertical"
                    android:text="@string/closeComments"
                    android:textColor="@color/textDark"
                    android:textColorHint="@color/hint"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <com.suke.widget.SwitchButton
                    android:id="@+id/closeComments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    app:sb_background="@color/background"
                    app:sb_button_color="@color/yellow"
                    app:sb_checked="false"
                    app:sb_checked_color="@color/color4"
                    app:sb_show_indicator="false"
                    app:sb_uncheck_color="@color/background" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="70dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_box_15"
        android:backgroundTint="@color/button"
        android:elevation="1dp"
        android:ems="10"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/medium"
        android:gravity="center"
        android:text="@string/publish"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>